Add proper teasers

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
@@ -114,14 +114,14 @@
 
 	// Box
 	.fki-box {
-		margin-bottom: @fki-box-xs-stacked-spacing;
+		margin-bottom: @fki-box-xs-stacked-spacing !important;;
 	}
 
 	.fki-box-small-spacing {
 
 		&.fki-box,
 		> .fki-box {
-			margin-bottom: floor( (@fki-box-xs-stacked-spacing / 3) );
+			margin-bottom: floor( (@fki-box-xs-stacked-spacing / 3) ) !important;;
 		}
 	}
 
@@ -129,7 +129,7 @@
 
 		&.fki-box,
 		> .fki-box {
-			margin-bottom: floor( (@fki-box-xs-stacked-spacing * 2) );
+			margin-bottom: floor( (@fki-box-xs-stacked-spacing * 2) ) !important;;
 		}
 	}
 }
@@ -146,14 +146,14 @@
 
 	// Box
 	.fki-box {
-		margin-bottom: @fki-box-sm-stacked-spacing;
+		margin-bottom: @fki-box-sm-stacked-spacing !important;;
 	}
 
 	.fki-box-small-spacing {
 
 		&.fki-box,
 		> .fki-box {
-			margin-bottom: floor( (@fki-box-sm-stacked-spacing / 3) );
+			margin-bottom: floor( (@fki-box-sm-stacked-spacing / 3) ) !important;;
 		}
 	}
 
@@ -161,7 +161,7 @@
 
 		&.fki-box,
 		> .fki-box {
-			margin-bottom: floor( (@fki-box-sm-stacked-spacing * 2) );
+			margin-bottom: floor( (@fki-box-sm-stacked-spacing * 2) ) !important;;
 		}
 	}
 }
@@ -178,14 +178,14 @@
 
 	// Box
 	.fki-box {
-		margin-bottom: @fki-box-md-stacked-spacing;
+		margin-bottom: @fki-box-md-stacked-spacing !important;;
 	}
 
 	.fki-box-small-spacing {
 
 		&.fki-box,
 		> .fki-box {
-			margin-bottom: floor( (@fki-box-md-stacked-spacing / 3) );
+			margin-bottom: floor( (@fki-box-md-stacked-spacing / 3) ) !important;;
 		}
 	}
 
@@ -193,7 +193,7 @@
 
 		&.fki-box,
 		> .fki-box {
-			margin-bottom: floor( (@fki-box-md-stacked-spacing * 2) );
+			margin-bottom: floor( (@fki-box-md-stacked-spacing * 2) ) !important;;
 		}
 	}
 }
@@ -210,14 +210,14 @@
 
 	// Box
 	.fki-box {
-		margin-bottom: @fki-box-lg-stacked-spacing;
+		margin-bottom: @fki-box-lg-stacked-spacing !important;;
 	}
 
 	.fki-box-small-spacing {
 
 		&.fki-box,
 		> .fki-box {
-			margin-bottom: floor( (@fki-box-lg-stacked-spacing / 3) );
+			margin-bottom: floor( (@fki-box-lg-stacked-spacing / 3) ) !important;;
 		}
 	}
 
@@ -225,7 +225,7 @@
 
 		&.fki-box,
 		> .fki-box {
-			margin-bottom: floor( (@fki-box-lg-stacked-spacing * 2) );
+			margin-bottom: floor( (@fki-box-lg-stacked-spacing * 2) ) !important;
 		}
 	}
 }
