--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/list/list.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/list/list.less
@@ -30,7 +30,7 @@
 	.fki-list-heading {
 		padding: @fki-list-heading-top-bottom-spacing @fki-list-heading-left-right-spacing;
 
-		.fki-list-title {
+		.fki-list-heading-title {
 			margin: 0;
 			.heading-h5;
 
