--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/template.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/template.less
@@ -7,3 +7,4 @@
 @default-left-right-spacing: floor( (@grid-gutter-width / 2) );
 @default-heading-top-bottom-spacing: 4px;
 @default-body-top-bottom-spacing: 10px;
+@default-footer-top-bottom-spacing: 6px;
