Add inner spacing on teasers

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/list/list.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/list/list.less
@@ -27,6 +27,13 @@
 .fki-list {
 	margin: floor((@fki-list-stacked-spacing / 2)) 0;
 
+	.fki-list-info {
+
+		span {
+			font-style: italic;
+		}
+	}
+
 	.fki-list-heading {
 		padding: @fki-list-heading-top-bottom-spacing @fki-list-heading-left-right-spacing;
 
