Remove table bottom margin from important message

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/teaser/teaser.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/teaser/teaser.less
@@ -40,6 +40,10 @@
         }
     }
 
+    .table {
+        margin: 0;
+    }
+
     // Image
     .fki-teaser-image-container {
         max-width: 80px;
