Message notifcation tpls and styling

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
@@ -266,7 +266,17 @@
 
 			.pane-title,
 			.fki-box-heading-title {
-				color: @heading-font-color;
+
+				&,
+				> a {
+
+					&,
+					&:hover,
+					&:focus,
+					&:active {
+						color: @heading-font-color;
+					}
+				}
 			}
 		}
 	}
