Add popover buttons

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/wrapper.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/wrapper.less
@@ -88,7 +88,13 @@
     .outer-wrapper {}
 
     // Inner wrapper
-    .inner-wrapper {}
+    .inner-wrapper {
+
+        .container {
+            margin-left: ((@grid-gutter-width / 2) + 36px * 2);
+            margin-right: ((@grid-gutter-width / 2) + 36px * 2);
+        }
+    }
 }
 
 // Large desktop
@@ -108,7 +114,13 @@
     .outer-wrapper {}
 
     // Inner wrapper
-    .inner-wrapper {}
+    .inner-wrapper {
+
+        .container {
+            margin-left: ((@grid-gutter-width / 2) + 36px * 2);
+            margin-right: ((@grid-gutter-width / 2) + 36px * 2);
+        }
+    }
 }
 
 // Print
