--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/wrapper.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/wrapper.less
@@ -91,7 +91,7 @@
     .inner-wrapper {
 
         .container {
-            margin-left: ((@grid-gutter-width / 2) + 36px * 2);
+            margin-left: ((@grid-gutter-width / 2) + 36px);
             margin-right: ((@grid-gutter-width / 2) + 36px * 2);
         }
     }
@@ -117,7 +117,7 @@
     .inner-wrapper {
 
         .container {
-            margin-left: ((@grid-gutter-width / 2) + 36px * 2);
+            margin-left: ((@grid-gutter-width / 2) + 36px);
             margin-right: ((@grid-gutter-width / 2) + 36px * 2);
         }
     }
