Resolve merge conflicts

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -17,6 +17,13 @@
 // Homebox
 #homebox {
 
+	#homebox-add {
+
+		.used {
+			display: none;
+		}
+	}
+
 	// Column
 	.homebox-column {
 		margin: 0;
