Add support for more flags

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -90,6 +90,19 @@
 			}
 		}
 	}
+
+	.flag-papirkurv {
+
+		.flag {
+
+			&.flag-action {
+
+				&:before {
+					content: @fa-var-trash;
+				}
+			}
+		}
+	}
 }
 
 // --------------------------------------------------
