Add default user picture

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/user-picture.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/user-picture.less
@@ -1,9 +1,9 @@
 // |--------------------------------------------------------------------------
-// | Comment
+// | User picture
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .comment
+// | - .user-picture
 // |
 
 // --------------------------------------------------
@@ -14,41 +14,11 @@
 // Styling
 // --------------------------------------------------
 
-// Comment
-.comment {
+// User picture
+.user-picture {
 
-	.comment-user-picture-wrapper {
-		width: (58px + (@default-left-right-spacing * 2));
-
-		.user-picture {
-			padding: @default-heading-top-bottom-spacing @default-left-right-spacing;
-			padding-right: 0;
-		}
-	}
-
-	.comment-body-wrapper {
-
-		.fki-comment-info {
-
-			span {
-				font-style: italic;
-			}
-		}
-	}
-}
-
-// Comment form
-.comment-form {
-
-	.control-label {
-		display: none;
-	}
-
-	.form-submit {
-		.pull-right;
-
-		text-transform: uppercase;
-		font-weight: bold;
+	img {
+		border-radius: @border-radius-base;
 	}
 }
 
@@ -59,83 +29,83 @@
 // Mobile
 @media @media-query-mobile {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // Print
 @media print {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // Touch
 .touch {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // No touch
 .no-touch {
 
-	// Comment
-	.comment {}
+	// User picture
+	.user-picture {}
 }
 
 // --------------------------------------------------
 // Mixins
 // --------------------------------------------------
 
-// Comment mixin
-.fki-mixin-comment() {}
+// User picture mixin
+.fki-mixin-user-picture() {}
