Comment layout feature

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/comment.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/comment.less
@@ -44,11 +44,16 @@
 		display: none;
 	}
 
-	.form-submit {
-		.pull-right;
+	.form-actions {
 
-		text-transform: uppercase;
-		font-weight: bold;
+		.form-submit {
+			.pull-right;
+
+			text-transform: uppercase;
+			font-weight: bold;
+		}
+
+		&:extend(.clearfix all);
 	}
 }
 
