--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/comment.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/comment.less
@@ -16,6 +16,8 @@
 
 // Comment
 .comment {
+	padding-top: 10px;
+	padding-bottom: 10px;
 
 	.comment-user-picture-wrapper {
 		width: (58px + (@default-left-right-spacing * 2));
@@ -24,6 +26,10 @@
 			padding: @default-heading-top-bottom-spacing @default-left-right-spacing;
 			padding-right: 0;
 		}
+	}
+
+	.table {
+		margin-bottom: 0;
 	}
 
 	.comment-body-wrapper {
