Lidt ekstra form styles

--- a/public_html/profiles/os2intra/themes/fki/src/less/stylesheet.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/stylesheet.less
@@ -1,3 +1,11 @@
 @import 'variables/loader';
 @import 'vendor/loader';
 @import 'template/loader';
+
+.date-no-float { float: left; width: auto; clear: none; }
+.date-no-float > .form-item > label { float: left }
+.start-date-wrapper { clear: left; }
+
+fieldset.date-combo .container-inline-date .date-padding {
+    padding: 0 10px;
+}
