Panels full width error fix

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
@@ -39,6 +39,10 @@
   fieldset.date-combo .container-inline-date .date-padding {
     padding: 0 10px;
   }
+
+  .panels-flexible-region-new-center {
+    width: auto !important;
+  }
 }
 
 // --------------------------------------------------
