Form add/edit styling

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
@@ -41,7 +41,11 @@
   }
 
   .panels-flexible-region-new-center {
-    width: auto !important;
+    width: 100% !important;
+  }
+
+  .table-responsive {
+    overflow-x: visible;
   }
 }
 
