Tilføjet hieracial select bredde

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
@@ -147,3 +147,9 @@
 
 // Add/edit node mixin
 .page-mixin-node-add-edit() {}
+
+
+
+.hierarchical-select-wrapper .hierarchical-select select { 
+	width: auto;
+}
