--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/full/full.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/full/full.less
@@ -119,3 +119,8 @@
 
 // Full node mixin
 .fki-mixin-full() {}
+
+
+// Dato visning
+
+.fki-full-body .date-display-single .date-display-range { display: inline; }
