--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
@@ -153,3 +153,6 @@
 .hierarchical-select-wrapper .hierarchical-select select { 
 	width: auto;
 }
+
+.form-item-publish-on label, 
+.form-item-unpublish-on label { display: block;}
