Apply color for homebox markedspladsen

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -127,6 +127,10 @@
 		&.fki-box-homebox-kommmende-aktiviteter {
 			.fki-box-tertiary;
 		}
+
+		&.fki-box-homebox-markedspladsen {
+			.fki-box-quaternary;
+		}
 	}
 }
 
