Watermark for markedspladsen homebox

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -115,7 +115,8 @@
 		&.fki-box-homebox {
 
 			&.fki-box-homebox-info-til-alle,
-			&.fki-box-homebox-kommmende-aktiviteter {
+			&.fki-box-homebox-kommmende-aktiviteter,
+			&.fki-box-homebox-markedspladsen {
 				.fki-box-watermarked;
 			}
 		}
