Homebox content layout

--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-designer.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-designer.less
@@ -45,6 +45,7 @@
 // Content
 @content-bg:           #fff;
 @content-border-color: @body-bg;
+@border-color: 				 #d4d9e4;
 
 // Typography
 @text-color-light: 	#6c8ba8;
