--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/list/list.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/list/list.less
@@ -10,9 +10,10 @@
 // Variables
 // --------------------------------------------------
 
-@fki-list-stacked-spacing: @grid-gutter-width;
+@fki-list-stacked-spacing: 5px;
+@fki-list-border-color: @border-color;
 
-@fki-list-heading-font-color: @gray-darker;
+@fki-list-heading-font-color: @brand-primary;
 @fki-list-heading-top-bottom-spacing: 3px;
 @fki-list-heading-left-right-spacing: 0;
 
@@ -25,7 +26,8 @@
 
 // List
 .fki-list {
-	margin: floor((@fki-list-stacked-spacing / 2)) 0;
+	padding: @fki-list-stacked-spacing 0;
+	border-bottom: 1px solid @fki-list-border-color;
 
 	.fki-list-info {
 
@@ -46,10 +48,54 @@
 				color: @fki-list-heading-font-color;
 			}
 		}
+
+		.fki-list-heading-time-ago {
+			font-style: italic;
+		}
 	}
 
 	.fki-list-body {
 		padding: @fki-list-body-top-bottom-spacing @fki-list-body-left-right-spacing;
+	}
+}
+
+// --------------------------------------------------
+// Variants
+// --------------------------------------------------
+
+.fki-box,
+.fki-box-primary {
+
+	.fki-list {
+		.fki-mixin-list-box-variant(@brand-primary);
+	}
+}
+
+.fki-box-secondary {
+
+	.fki-list {
+		.fki-mixin-list-box-variant(@brand-secondary);
+	}
+}
+
+.fki-box-tertiary {
+
+	.fki-list {
+		.fki-mixin-list-box-variant(@brand-tertiary);
+	}
+}
+
+.fki-box-quaternary {
+
+	.fki-list {
+		.fki-mixin-list-box-variant(@brand-quaternary);
+	}
+}
+
+.fki-box-quinary {
+
+	.fki-list {
+		.fki-mixin-list-box-variant(@brand-quinary);
 	}
 }
 
@@ -111,4 +157,47 @@
 
 	// List
 	.fki-list {}
+}
+
+// Print
+@media print {
+
+	// List
+	.fki-list {}
+}
+
+// Touch
+.touch {
+
+	// List
+	.fki-list {}
+}
+
+// No touch
+.no-touch {
+
+	// List
+	.fki-list {}
+}
+
+// --------------------------------------------------
+// Mixins
+// --------------------------------------------------
+
+// List mixin
+.fki-mixin-list() {}
+
+// Box variant mixin
+.fki-mixin-list-box-variant(@font-color) {
+
+	.fki-list-heading {
+
+		.fki-list-heading-calendar-date {
+			color: @font-color;
+		}
+
+		.fki-list-heading-time-ago {
+			color: @font-color;
+		}
+	}
 }
