--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/comment.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/comment.less
@@ -63,6 +63,10 @@
 	}
 }
 
+.indented {
+	margin-left: 40px;
+}
+
 // --------------------------------------------------
 // Responsive
 // --------------------------------------------------
