Add styling for files for download at node full

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -27,6 +27,7 @@
 // Links
 .fki-links {
 
+	.number-of-files a,
 	.flag {
 		font-size: @fki-links-font-size;
 		font-weight: @fki-links-font-weight;
@@ -47,6 +48,16 @@
 
 			&:before {
 				color: @fki-links-icon-hover-color;
+			}
+		}
+	}
+
+	.number-of-files {
+
+		a {
+
+			&:before {
+				content: @fa-var-cloud-download;
 			}
 		}
 	}
