Fix spotbox image layout

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/teaser/teaser-spotbox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/teaser/teaser-spotbox.less
@@ -65,6 +65,7 @@
 .fki-spotbox-teaser {
 
 	&.fki-spotbox-teaser-variant-with-image {
+		padding: 0;
 		background-color: @fki-spotbox-with-image-background-color;
 
 		.fki-teaser-heading {
@@ -83,6 +84,7 @@
 			display: block;
 			.border-top-radius(@fki-spotbox-border-radius);
 			overflow: hidden;
+			padding: 0;
 
 			img {
 				width: 100%;
