Remove toolboxes from user

--- a/public_html/profiles/os2intra/modules/custom/node_basket/css/node_basket.css
+++ b/public_html/profiles/os2intra/modules/custom/node_basket/css/node_basket.css
@@ -37,6 +37,17 @@
   display: block;
 }
 
-.basket-information {
+
+.node-basket .node-basket-information,
+.node-basket .node-basket-action-buttons,
+.node-basket .node-basket-basket,
+.node-basket .node-basket-toolboxes,
+.node-basket .node-basket-other-toolboxes {
   margin-bottom: 20px;
 }
+
+.node-basket .node-basket-information {}
+.node-basket .node-basket-action-buttons {}
+.node-basket .node-basket-basket {}
+.node-basket .node-basket-toolboxes {}
+.node-basket .node-basket-other-toolboxes {}
