--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/node-basket.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/node-basket.less
@@ -27,10 +27,20 @@
 	.node-basket-basket {}
 
 	// Toolboxes
-	.node-basket-toolboxes {}
+	.node-basket-toolboxes {
+
+		.node-basket-toolboxes-heading-title {
+			.heading-h3;
+		}
+	}
 
 	// Other toolboxes
-	.node-basket-other-toolboxes {}
+	.node-basket-other-toolboxes {
+
+		.node-basket-other-toolboxes-heading-title {
+			.heading-h3;
+		}
+	}
 }
 
 // --------------------------------------------------
