Node basket structural layout

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/includeable/includeable.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/includeable/includeable.less
@@ -81,14 +81,17 @@
 	}
 }
 
-.views-row {
+.field-items {
 
-	&:last-child {
+	.field-item {
 
-		.fki-includeable {
+		&:last-child {
 
-			&:last-child {
-				border-bottom: 0;
+			.fki-includeable {
+
+				&:last-child {
+					border-bottom: 0;
+				}
 			}
 		}
 	}
