Convert footer link to button on node-basket

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/full/full.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/full/full.less
@@ -30,6 +30,12 @@
 		.heading-h5;
 		font-weight: @headings-font-weight-bold;
 	}
+
+	.fki-full-body-references {
+		margin-bottom: 20px;
+	}
+
+	.fki-full-body-action-buttons {}
 }
 
 // --------------------------------------------------
