Add extra data on basket items

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/includeable/includeable.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/includeable/includeable.less
@@ -38,6 +38,14 @@
 				color: @fki-includeable-heading-font-color;
 			}
 		}
+
+		.fki-includeable-heading-author {
+			font-size: @font-size-small;
+			font-style: italic;
+
+			.fki-includeable-heading-author-intro {}
+			.fki-includeable-heading-author-link {}
+		}
 	}
 }
 
