Hieracial select css

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
@@ -47,6 +47,15 @@
   .table-responsive {
     overflow-x: visible;
   }
+  .node-form {
+	  .hierarchical-select {
+		  .form-control {
+			  font-size: @font-size-small;
+			  line-height: 1.2;
+			  padding: @padding-xs-vertical @padding-xs-horizontal;
+		  }
+	  }
+  }
 }
 
 // --------------------------------------------------
