Move node basket relevant from template php to module

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -114,7 +114,7 @@
 
 		&.fki-box-homebox {
 
-			&.fki-box-homebox-info-til-alle,
+			&.fki-box-homebox-fællesnyt,
 			&.fki-box-homebox-kommmende-aktiviteter,
 			&.fki-box-homebox-markedspladsen {
 				.fki-box-watermarked;
