Margin på afsnits overskrifter

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/full/full.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/full/full.less
@@ -130,3 +130,7 @@
 // Dato visning
 
 .fki-full-body .date-display-single .date-display-range { display: inline; }
+
+.fki-full-body .views-bootstrap-accordion-plugin-style {
+	margin: 10px 0;
+}
