Add icon for mark as old

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -114,6 +114,22 @@
 			}
 		}
 	}
+
+	.flag-os2intra_flag_node_old {
+		.pull-right;
+
+		.flag-os2intra-flag-node-old {
+
+			.flag {
+
+				&:before {
+					content: @fa-var-exclamation-triangle;
+				}
+			}
+		}
+	}
+
+	&:extend(.clearfix all);
 }
 
 // --------------------------------------------------
