--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/loader.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/loader.less
@@ -1,4 +1,2 @@
-@import "full/loader";
-@import "teaser/loader";
-@import "list/loader";
-@import "includeable/loader";
+@import "node/loader";
+@import "taxonomy-term/loader";
