--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser-message-notification.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser-message-notification.less
@@ -23,9 +23,9 @@
 	&.fki-box {
 		background-color: @fki-message-notification-teaser-background-color;
 
-		.fki-teaser-heading {
+		.fki-node-teaser-heading {
 
-			.fki-teaser-heading-title {
+			.fki-node-teaser-heading-title {
 
 				&,
 				> a {
@@ -52,9 +52,9 @@
 	&.fki-message-notification-teaser-variant-with-image {
 		background-color: @fki-spotbox-with-image-background-color;
 
-		.fki-teaser-heading {
+		.fki-node-teaser-heading {
 
-			.fki-teaser-heading-title {
+			.fki-node-teaser-heading-title {
 				.heading-h4;
 
 				&,
@@ -64,7 +64,7 @@
 			}
 		}
 
-		.fki-teaser-image {
+		.fki-node-teaser-image {
 			display: block;
 			.border-top-radius(@fki-spotbox-border-radius);
 			overflow: hidden;
@@ -74,7 +74,7 @@
 			}
 		}
 
-		.fki-teaser-body {
+		.fki-node-teaser-body {
 			display: none;
 		}
 	}
