--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser-spotbox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser-spotbox.less
@@ -33,9 +33,9 @@
 	background-color: @fki-spotbox-background-color;
 	border-radius: @fki-spotbox-border-radius;
 
-	.fki-teaser-heading {
+	.fki-node-teaser-heading {
 
-		.fki-teaser-heading-title {
+		.fki-node-teaser-heading-title {
 			.heading-h5;
 
 			&,
@@ -45,14 +45,14 @@
 		}
 	}
 
-	.fki-teaser-body {
+	.fki-node-teaser-body {
 
-		.fki-teaser-body-text {
+		.fki-node-teaser-body-text {
 			color: #8c9eb6;
 		}
 	}
 
-	.fki-teaser-image {
+	.fki-node-teaser-image {
 		display: none;
 	}
 }
@@ -68,9 +68,9 @@
 		padding: 0;
 		background-color: @fki-spotbox-with-image-background-color;
 
-		.fki-teaser-heading {
+		.fki-node-teaser-heading {
 
-			.fki-teaser-heading-title {
+			.fki-node-teaser-heading-title {
 				.heading-h4;
 
 				&,
@@ -80,7 +80,7 @@
 			}
 		}
 
-		.fki-teaser-image {
+		.fki-node-teaser-image {
 			display: block;
 			.border-top-radius(@fki-spotbox-border-radius);
 			overflow: hidden;
@@ -91,7 +91,7 @@
 			}
 		}
 
-		.fki-teaser-body {
+		.fki-node-teaser-body {
 			display: none;
 		}
 	}
