--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/taxonomy-term/full/full.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/taxonomy-term/full/full.less
@@ -1,41 +1,56 @@
 // |--------------------------------------------------------------------------
-// | Full node
+// | Full taxonomy term
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-node-full
+// | - .fki-taxonomy-term-full
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
+@fki-taxonomy-term-full-icon-font-color: @body-bg;
+
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
-// Full node
-.fki-node-full {
+// Full taxonomy term
+.fki-taxonomy-term-full {
 
-	.fki-node-full-heading {
+	.fki-taxonomy-term-full-heading {
 
-		.fki-node-full-heading-title {
-			.heading-h3;
+		.fki-taxonomy-term-full-heading-title {
+			.heading-h2;
 			margin: 8px 0;
 		}
 	}
 
-	.fki-node-full-intro {
-		color: @brand-secondary;
-		.heading-h5;
-		font-weight: @headings-font-weight-bold;
+	.fki-taxonomy-term-full-body {
+
+		.fki-taxonomy-term-full-body-heading {
+
+			.fki-taxonomy-term-full-body-heading-title {
+				.heading-h2;
+				margin: 8px 0;
+			}
+		}
 	}
 
-	.fki-node-full-body-references {
-		margin-bottom: 20px;
+	.fki-taxonomy-term-full-icon {
+		vertical-align: middle;
+		text-align: right;
+
+		.fa {
+			font-size: 60px;
+			color: @fki-taxonomy-term-full-icon-font-color;
+		}
 	}
 
-	.fki-node-full-body-action-buttons {}
+	.table {
+		margin-bottom: 0;
+	}
 }
 
 // --------------------------------------------------
@@ -45,90 +60,83 @@
 // Mobile
 @media @media-query-mobile {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // Print
 @media print {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // Touch
 .touch {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // No touch
 .no-touch {
 
-	// Full node
-	.fki-node-full {}
+	// Full taxonomy term
+	.fki-taxonomy-term-full {}
 }
 
 // --------------------------------------------------
 // Mixins
 // --------------------------------------------------
 
-// Full node mixin
-.fki-mixin-node-full() {}
-
-// Dato visning
-.fki-node-full-body .date-display-single .date-display-range { display: inline; }
-
-.fki-node-full-body .views-bootstrap-accordion-plugin-style {
-	margin: 10px 0;
-}
+// Full taxonomy term mixin
+.fki-mixin-taxonomy-term-full() {}
