--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/list/list-event.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/list/list-event.less
@@ -3,26 +3,26 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-list-event
+// | - .fki-node-list-event
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
-@fki-list-event-element-spacing: 10px;
+@fki-node-list-event-element-spacing: 10px;
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
 // List - event
-.fki-list-event {
+.fki-node-list-event {
 
-	.fki-list-heading {
+	.fki-node-list-heading {
 
-		.fki-list-heading-calendar-date,
-		.fki-list-heading-title {
+		.fki-node-list-heading-calendar-date,
+		.fki-node-list-heading-title {
 			float: left;
 		}
 
@@ -33,7 +33,7 @@
 				vertical-align: middle;
 
 				&:first-child {
-					width: (@fki-calendar-width + @fki-list-event-element-spacing);
+					width: (@fki-calendar-width + @fki-node-list-event-element-spacing);
 				}
 			}
 		}
@@ -50,77 +50,77 @@
 @media @media-query-mobile {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // Print
 @media print {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // Touch
 .touch {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // No touch
 .no-touch {
 
 	// List - event
-	.fki-list-event {}
+	.fki-node-list-event {}
 }
 
 // --------------------------------------------------
